# gage-inspect

./: .gitignore  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.git-hooks/: commit-msg  commit-msg.py
.github/workflows/: build.yaml  release.yaml
examples/add/: README.md  add.py  serve.py  test.py
examples/eli5/: README.md  eli5.py  paws.ipynb  paws.py  samples.yaml
examples/hello-inspect/: README.md  theory.py
examples/quick-start/: README.md  funny.py  serve.py
src/gage_inspect/scorer/: __init__.py  _model.py
src/gage_inspect/solver/: _task_doc.py
src/gage_inspect/task/: __init__.py  _echo.py  _run.py
tests/: __init__.py  test_pkg_info.py
tests/dataset/: test_dataset_description.py  test_dataset_list.py  test_dataset_registry.py  test_default_task_dataset.py  test_named_task_dataset.py  test_samefile_task_dataset.py
tests/dataset/samples/: bar.py  foo.py
tests/examples/: add.md  eli5.md  hello-inspect.md  quick-start.md
tests/log/: test_log_list.py  test_read_log.py
tests/log/samples/: 2025-09-04T12-35-53-05-00_hello_ZeS6vQckR4iDF7wpk4TdZr_001.eval  2025-09-09T07-16-14-05-00_add_SQLZAGGZEBedtQPD5A8wq6.eval.deleted
tests/scorer/: test_llm_judge.py  test_match_numeric.py  test_match_str.py  test_patch_scorers.py
tests/solver/: test_input_template.py  test_llm_judge.py  test_task_doc_solver.py
tests/task/: test_task_attribs.py  test_task_doc.py
