[project]
name = "gage-inspect"
version = "0.2.0"
description = "Gage support for Inspect AI"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
]
requires-python = ">=3.10"
dependencies = ["docstring-parser>=0.17.0", "inspect-ai>=0.3.123"]

[project.optional-dependencies]
dev = ["coverage>=7.12.0", "groktest>=0.3", "pytest>=8.4.1",]
examples = [
    "bm25s>=0.2.14",
    "chromadb>=1.3.4",
    "datasets>=4.4.1",
    "fastapi[standard]>=0.123.0",
    "githubpy>=2.0.0",
    "langchain>=1.0.5",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "ollama>=0.6.1",
    "openai>=2.8.0",
    "pygithub>=2.8.1",
    "pystemmer>=3.0.0",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.groktest]
include = "tests/**/*.md"
python.init = "from tests import *"

[tool.pytest]
testpaths = ["tests"]
